apps/bgd/overlays/bgd/bgd-wait.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: bgd
  name: bgd-wait
  namespace: bgd
  annotations:
    argocd.argoproj.io/sync-wave: "0"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: bgd
  strategy: {}
  template:
    spec:
      containers:
        - name: sleep
          image: alpine:latest
          command: ["sleep", "30"]
---
